<resources>
    <string name="app_name">RV</string>

    <string name="lblMatricule">Matricule : </string>

    <string name="lblMdp">Mot de passe : </string>

    <string name="btnValider"> Valider </string>

    <string name="btnAnnuler"> Annuler </string>

    <string name="password">Password</string>

    <string name="login">Login</string>

    <string name="tvErreur"> Echec à la connexion. Recommencez </string>


    <string name="lblVisiteur">  </string>

    <string name="btnConsulter"> CONSULTER UN RAPPORT DE VISITE </string>

    <string name="btnSaisir"> SAISIR UN RAPPORT DE VISITE </string>


</resources>