<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".rv.MenuRvActivity">

    <TextView
        android:id="@+id/lblVisiteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarDefaultDelayBeforeFade="600"
        android:text="@string/lblVisiteur"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="31dp" />


    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/btnConsulter"
        android:onClick="Consulter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/btnSaisir"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/btnSaisir"
        android:onClick="Saisir"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="100dp" />
</LinearLayout>