<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:adjustViewBounds="true"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    tools:context="fr.gsb.rv.MainActivity">


    <TextView
        android:id='@+id/vide'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <TextView
        android:id='@+id/errorMessage'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="#663f39"
        android:textSize="24sp" />


   <!-- <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:alpha=".75"
        android:src="@drawable/logo-gsb" /> -->

    <TextView
        android:id='@+id/vide2'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text='@string/lblMatricule' />


    <EditText
        android:id="@+id/etMatricule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/login"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text='@string/lblMdp' />

    <EditText
        android:id="@+id/etMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id='@+id/vide1'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
    <!---->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seConnecter"
            android:text="@string/btnValider" />
        <!--android:onClick=""-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Annuler"
            android:text="@string/btnAnnuler" />

    </LinearLayout>


</LinearLayout>



